--- a/tests/integration/targets/vmware_cluster_dpm/defaults/main.yml
+++ b/tests/integration/targets/vmware_cluster_dpm/defaults/main.yml
@@ -3,5 +3,11 @@ test_cluster: "{{ tiny_prefix }}_cluster_dpm_test"
 run_on_simulator: false
 
 dpm_enable: true
-dpm_automation_level: manual
-dpm_recommendation_priority_threshold: 2
+dpm_disable: false
+dpm_yes: yes
+dpm_no: no
+dpm_boo: "y"
+dpm_automation_level: Manual
+dpm_automation_level_aut: automated
+dpm_recommendation_priority_threshold: 3
+dpm_recommendation_priority_threshold_2: 2
